--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
   <title>
     Institute Placements
   </title>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
 <style>
   @import url('https://fonts.googleapis.com/css?family=Mukta:200,300,400,500,600,700,800&display=swap');
 
   body{
     font-family: 'Mukta', sans-serif;
-    overflow-y:hidden;
+    /* overflow-y:hidden; */
   }
     .wrapper{
       display:grid;
       padding: 10%;
       padding-top: 5%;
       padding-bottom: 5%;
-      grid-template-columns: 2fr 2fr 1fr 1fr;
+      grid-template-columns: 4fr 1fr 1fr;
       grid-gap: 1em;
       grid-auto-rows: minmax(230px, auto);
       justify-content: end;
       align-items: center;
     }
-    .box1{
+    /* .box1{
       grid-column: 1/3;
-    }
+    } */
     .box div span{
     font-size: 18px;
     font-weight: 600;
@@ -34,12 +34,12 @@
     top: -42%;
     left: 7%;
     }
-    .box4{
+    /* .box4{
       grid-column: 1/3;
     }
     .box7{
       grid-column: 1/3;
-    }
+    } */
     p{
       font-size: 22px;
     }
@@ -62,6 +62,30 @@
     a{
       text-decoration: none;
     }
+
+    @media (max-width: 768px){
+  .wrapper{ grid-template-columns: 1fr 1fr; 
+          padding: 10px;  
+  }
+  
+  .box1{grid-column: 1/3;}
+  .box4{grid-column: 1/3;}
+  .box7{grid-column: 1/3;}
+  .box:nth-child(1){ order: 1; }
+  .box:nth-child(2){ order: 4; justify-self: center; }
+  .box:nth-child(3){ order: 5; justify-self: center;}
+  .box:nth-child(4){ order: 2; }
+  .box:nth-child(5){ order: 6; justify-self: center;}
+  .box:nth-child(6){ order: 7; justify-self: center;}
+  .box:nth-child(7){ order: 3; }
+  .box:nth-child(8){ order: 8; justify-self: center;}
+  .box:nth-child(9){ order: 9; justify-self: center;}
+  #rectangle{
+    box-sizing: border-box;
+    width:41vw;
+    height:41vw;
+    }    
+}
 
 
   </style>
