--- a/index.html
+++ b/index.html
@@ -62,7 +62,28 @@
     a{
       text-decoration: none;
     }
-
+    @media (max-width: 768px){
+  .wrapper{ grid-template-columns: 1fr 1fr; 
+          padding: 10px;  
+  }
+  
+  .box1{grid-column: 1/3;}
+  .box4{grid-column: 1/3;}
+  .box7{grid-column: 1/3;}
+  .box:nth-child(1){ order: 1; }
+  .box:nth-child(2){ order: 4; justify-self: center; }
+  .box:nth-child(3){ order: 5; justify-self: center;}
+  .box:nth-child(4){ order: 2; }
+  .box:nth-child(5){ order: 6; justify-self: center;}
+  .box:nth-child(6){ order: 7; justify-self: center;}
+  .box:nth-child(7){ order: 3; }
+  .box:nth-child(8){ order: 8; justify-self: center;}
+  .box:nth-child(9){ order: 9; justify-self: center;}
+  #rectangle{
+    box-sizing: border-box;
+    width:41vw;
+    height:41vw;
+    }    }
 
   </style>
 </head>
