--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   body{
     font-family: 'Mukta', sans-serif;
-    overflow-y:hidden;
+
   }
     .wrapper{
       display:grid;
@@ -70,6 +70,7 @@
   .box1{grid-column: 1/3;}
   .box4{grid-column: 1/3;}
   .box7{grid-column: 1/3;}
+  
   .box:nth-child(1){ order: 1; }
   .box:nth-child(2){ order: 4; justify-self: center; }
   .box:nth-child(3){ order: 5; justify-self: center;}
@@ -79,7 +80,8 @@
   .box:nth-child(7){ order: 3; }
   .box:nth-child(8){ order: 8; justify-self: center;}
   .box:nth-child(9){ order: 9; justify-self: center;}
-  #rectangle{
+  #rectangle
+  {
     box-sizing: border-box;
     width:41vw;
     height:41vw;
