--- a/index.html
+++ b/index.html
@@ -1,185 +1,300 @@
 <html>
+
 <head>
-  <title>
-    Institute Placements
-  </title>
- 
-<style>
-  @import url('https://fonts.googleapis.com/css?family=Mukta:200,300,400,500,600,700,800&display=swap');
+    <title>
+        Institute Placements
+    </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-  body{
-    font-family: 'Mukta', sans-serif;
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Mukta:200,300,400,500,600,700,800&display=swap');
 
-  }
-    .wrapper{
-      display:grid;
-      padding: 10%;
-      padding-top: 5%;
-      padding-bottom: 5%;
-      grid-template-columns: 2fr 2fr 1fr 1fr;
-      grid-gap: 1em;
-      grid-auto-rows: minmax(230px, auto);
-      justify-content: end;
-      align-items: center;
-    }
-    .box1{
-      grid-column: 1/3;
-    }
-    .box div span{
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 2;
-    padding: 0 15px 0 10px;
-    position: relative;
-    top: -42%;
-    left: 7%;
-    }
-    .box4{
-      grid-column: 1/3;
-    }
-    .box7{
-      grid-column: 1/3;
-    }
-    p{
-      font-size: 22px;
-    }
-    h1{
-      font-size: 78px;
-      font-weight: 800;
-      line-height: 0;
-    }
-    h2{
-      font-size: 52px;
-      font-weight: 500;
-      color: #D5D5D5;
-      line-height: 0.5;
-    }
-    #rectangle{
-    box-sizing: border-box;
-    width:200px;
-    height:200px;
-    }
-    a{
-      text-decoration: none;
-    }
+        body {
+            font-family: 'Mukta', sans-serif;
+
+        }
+
+        .wrapper {
+            display: grid;
+            padding: 10%;
+            padding-top: 5%;
+            padding-bottom: 5%;
+            grid-template-columns: 2fr 2fr 1fr 1fr;
+            grid-gap: 1em;
+            grid-auto-rows: minmax(230px, auto);
+            justify-content: end;
+            align-items: center;
+        }
+
+        .box1 {
+            grid-column: 1/3;
+        }
+
+        .box div span {
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 2;
+            padding: 0 15px 0 10px;
+            position: relative;
+            top: -42%;
+            left: 7%;
+        }
+
+        .box4 {
+            grid-column: 1/3;
+        }
+
+        .box7 {
+            grid-column: 1/3;
+        }
+
+        p {
+            font-size: 22px;
+        }
+
+        h1 {
+            font-size: 78px;
+            font-weight: 800;
+            line-height: 0;
+        }
+
+        h2 {
+            font-size: 52px;
+            font-weight: 500;
+            color: #D5D5D5;
+            line-height: 0.5;
+        }
+
+        #rectangle {
+            box-sizing: border-box;
+            width: 200px;
+            height: 200px;
+        }
+
+        a {
+            text-decoration: none;
+        }
 
 
-    @media (max-width: 1000px){
-  .wrapper{ grid-template-columns: 1fr 1fr; 
-          padding: 10px;  
-  }
-  
-  .box1{grid-column: 1/3;}
-  .box4{grid-column: 1/3;}
-  .box7{grid-column: 1/3;}
-  
-  .box:nth-child(1){ order: 1; }
-  .box:nth-child(2){ order: 4; justify-self: center; }
-  .box:nth-child(3){ order: 5; justify-self: center;}
-  .box:nth-child(4){ order: 2; }
-  .box:nth-child(5){ order: 6; justify-self: center;}
-  .box:nth-child(6){ order: 7; justify-self: center;}
-  .box:nth-child(7){ order: 3; }
-  .box:nth-child(8){ order: 8; justify-self: center;}
-  .box:nth-child(9){ order: 9; justify-self: center;}
-  #rectangle
-  {
-    box-sizing: border-box;
-    width:41vw;
-    height:41vw;
-    }    }
-    @supports (-webkit-overflow-scrolling: touch) {
-  
-      .wrapper{ grid-template-columns: 1fr 1fr; 
-          padding: 10px;  
-  }
-  
-  .box1{grid-column: 1/3;}
-  .box4{grid-column: 1/3;}
-  .box7{grid-column: 1/3;}
-  
-  .box:nth-child(1){ order: 1; }
-  .box:nth-child(2){ order: 4; justify-self: center; }
-  .box:nth-child(3){ order: 5; justify-self: center;}
-  .box:nth-child(4){ order: 2; }
-  .box:nth-child(5){ order: 6; justify-self: center;}
-  .box:nth-child(6){ order: 7; justify-self: center;}
-  .box:nth-child(7){ order: 3; }
-  .box:nth-child(8){ order: 8; justify-self: center;}
-  .box:nth-child(9){ order: 9; justify-self: center;}
-  #rectangle
-  {
-    box-sizing: border-box;
-    width:41vw;
-    height:41vw;
-    }   
-}
-  </style>
+        @media (max-width: 1000px) {
+            .wrapper {
+                grid-template-columns: 1fr 1fr;
+                padding: 10px;
+            }
+
+            .box1 {
+                grid-column: 1/3;
+            }
+
+            .box4 {
+                grid-column: 1/3;
+            }
+
+            .box7 {
+                grid-column: 1/3;
+            }
+
+            .box:nth-child(1) {
+                order: 1;
+            }
+
+            .box:nth-child(2) {
+                order: 4;
+                justify-self: center;
+            }
+
+            .box:nth-child(3) {
+                order: 5;
+                justify-self: center;
+            }
+
+            .box:nth-child(4) {
+                order: 2;
+            }
+
+            .box:nth-child(5) {
+                order: 6;
+                justify-self: center;
+            }
+
+            .box:nth-child(6) {
+                order: 7;
+                justify-self: center;
+            }
+
+            .box:nth-child(7) {
+                order: 3;
+            }
+
+            .box:nth-child(8) {
+                order: 8;
+                justify-self: center;
+            }
+
+            .box:nth-child(9) {
+                order: 9;
+                justify-self: center;
+            }
+
+            #rectangle {
+                box-sizing: border-box;
+                width: 41vw;
+                height: 41vw;
+            }
+        }
+
+        @supports (-webkit-overflow-scrolling: touch) {
+
+            .wrapper {
+                grid-template-columns: 1fr 1fr;
+                padding: 10px;
+            }
+
+            .box1 {
+                grid-column: 1/3;
+            }
+
+            .box4 {
+                grid-column: 1/3;
+            }
+
+            .box7 {
+                grid-column: 1/3;
+            }
+
+            .box:nth-child(1) {
+                order: 1;
+            }
+
+            .box:nth-child(2) {
+                order: 4;
+                justify-self: center;
+            }
+
+            .box:nth-child(3) {
+                order: 5;
+                justify-self: center;
+            }
+
+            .box:nth-child(4) {
+                order: 2;
+            }
+
+            .box:nth-child(5) {
+                order: 6;
+                justify-self: center;
+            }
+
+            .box:nth-child(6) {
+                order: 7;
+                justify-self: center;
+            }
+
+            .box:nth-child(7) {
+                order: 3;
+            }
+
+            .box:nth-child(8) {
+                order: 8;
+                justify-self: center;
+            }
+
+            .box:nth-child(9) {
+                order: 9;
+                justify-self: center;
+            }
+
+            #rectangle {
+                box-sizing: border-box;
+                width: 41vw;
+                height: 41vw;
+            }
+        }
+    </style>
 </head>
+
 <body>
-  <div class="wrapper">
-    <div class="box box1"><h1>IDC</h1><h2>School of Design</h2></div>
-    <div class="box box2">
-      <a href="#"><div id="rectangle" style="background:blue; border: 6px solid #8BEEE0;">
-        <img style="width:100%;"src="Images/IxD.png">
-        <span style="color:black; background:#8BEEE0;">Interaction</span><br><span style="color:black; background:#8BEEE0;">Design</span>
-      </div>
-    </div></a>
-    <div class="box box3">
-      <a href="#"><div id="rectangle" style="background: #FFF7DB; border: 6px solid #FFCB23;">
-        <img style="width:100%;"src="Images/B.Des.png">
-        <span style="color:black; background:#FFCB23;">Bachelors of</span><br><span style="color:black; background:#FFCB23;">Design</span>
-      </div>
-    </div></a>
-    <div class="box box4">
-      <p>IDC envisions a holistic design education that shapes the students into responsible contributors to the society. It enables them to identify significant
-      contemporary problems, inculcate critical thinking, critique conventional solutions, and challenge the status quo to arrive at creative solutions through
-      collaborative team efforts at different levels of society and influencing policymaking that lead to innovations.</p>
+    <div class="wrapper">
+        <div class="box box1">
+            <h1>IDC</h1>
+            <h2>School of Design</h2>
+        </div>
+        <div class="box box2">
+            <a href="#">
+                <div id="rectangle" style="background:blue; border: 6px solid #8BEEE0;">
+                    <img style="width:100%;" src="Images/IxD.png">
+                    <span style="color:black; background:#8BEEE0;">Interaction</span><br><span style="color:black; background:#8BEEE0;">Design</span>
+                </div>
+        </div></a>
+        <div class="box box3">
+            <a href="#">
+                <div id="rectangle" style="background: #FFF7DB; border: 6px solid #FFCB23;">
+                    <img style="width:100%;" src="Images/B.Des.png">
+                    <span style="color:black; background:#FFCB23;">Bachelors of</span><br><span style="color:black; background:#FFCB23;">Design</span>
+                </div>
+        </div></a>
+        <div class="box box4">
+            <p>IDC envisions a holistic design education that shapes the students into responsible contributors to the society. It enables them to identify significant
+                contemporary problems, inculcate critical thinking, critique conventional solutions, and challenge the status quo to arrive at creative solutions through
+                collaborative team efforts at different levels of society and influencing policymaking that lead to innovations.</p>
+        </div>
+        <div class="box box5">
+            <a href="#">
+                <div id="rectangle" style="background: #FFF7DB; border: 6px solid #FF2F6E;">
+                    <img style="width:100%;" src="Images/PD.png">
+                    <span style="color:white; background:#FF2F6E;">Industrial</span><br><span style="color:white; background:#FF2F6E;">Design</span>
+                </div>
+        </div></a>
+        <div class="box box6">
+            <a href="#">
+                <div id="rectangle" style="background: #FFF7DB; border: 6px solid #C5635B;">
+                    <img style="width:100%;" src="Images/CD.png">
+                    <span style="color:white; background:#C5635B;">Communication</span><br><span style="color:white; background:#C5635B;">Design</span>
+                </div>
+        </div></a>
+        <div class="box box7"><a href="#">
+                <h3>Placement Registration ><h3>
+            </a></div>
+        <div class="box box8">
+            <a href="#">
+                <div id="rectangle" style="background: #FFF7DB; border: 6px solid #4A6AFF;">
+                    <img style="width:100%;" src="Images/AD.png">
+                    <span style="color:white; background:#4A6AFF;">Animation</span><br><span style="color:white; background:#4A6AFF;">Design</span>
+                </div>
+        </div></a>
+        <div class="box box9">
+            <a href="#">
+                <div id="rectangle" style="background: #FFF7DB; border: 6px solid #55F6FE;">
+                    <img style="width:100%;" src="Images/MVD.png">
+                    <span style="color:black; background:#55F6FE;">Mobility & Vehicle</span><br><span style="color:black; background:#55F6FE;">Design</span>
+                </div>
+        </div></a>
     </div>
-    <div class="box box5">
-      <a href="#"><div id="rectangle" style="background: #FFF7DB; border: 6px solid #FF2F6E;">
-        <img style="width:100%;"src="Images/PD.png">
-        <span style="color:white; background:#FF2F6E;">Industrial</span><br><span style="color:white; background:#FF2F6E;">Design</span>
-      </div>
-    </div></a>
-    <div class="box box6">
-      <a href="#"><div id="rectangle" style="background: #FFF7DB; border: 6px solid #C5635B;">
-        <img style="width:100%;"src="Images/CD.png">
-        <span style="color:white; background:#C5635B;">Communication</span><br><span style="color:white; background:#C5635B;">Design</span>
-      </div>
-    </div></a>
-    <div class="box box7"><a href="#"><h3>Placement Registration ><h3></a></div>
-    <div class="box box8">
-      <a href="#"><div id="rectangle" style="background: #FFF7DB; border: 6px solid #4A6AFF;">
-        <img style="width:100%;"src="Images/AD.png">
-        <span style="color:white; background:#4A6AFF;">Animation</span><br><span style="color:white; background:#4A6AFF;">Design</span>
-      </div>
-    </div></a>
-    <div class="box box9">
-      <a href="#"><div id="rectangle" style="background: #FFF7DB; border: 6px solid #55F6FE;">
-        <img style="width:100%;"src="Images/MVD.png">
-        <span style="color:black; background:#55F6FE;">Mobility & Vehicle</span><br><span style="color:black; background:#55F6FE;">Design</span>
-      </div>
-    </div></a>
-  </div>
 
-<script>
-window.mobilecheck = function() {
-  var check = false;
-  (function(a){if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4))) check = true;})(navigator.userAgent||navigator.vendor||window.opera);
-  return check;
-};
+    <script>
+        window.mobilecheck = function() {
+            var check = false;
+            (function(a) {
+                if (
+                    /(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i
+                    .test(a) ||
+                    /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i
+                    .test(a.substr(0, 4))) check = true;
+            })(navigator.userAgent || navigator.vendor || window.opera);
+            return check;
+        };
 
-if(check){
-  var styles = `
-  .wrapper{ grid-template-columns: 1fr 1fr; 
-          padding: 10px;  
+        if (check) {
+            var styles =
+                `
+  .wrapper{ grid-template-columns: 1fr 1fr;
+          padding: 10px;
   }
-  
+
   .box1{grid-column: 1/3;}
   .box4{grid-column: 1/3;}
   .box7{grid-column: 1/3;}
-  
+
   .box:nth-child(1){ order: 1; }
   .box:nth-child(2){ order: 4; justify-self: center; }
   .box:nth-child(3){ order: 5; justify-self: center;}
@@ -194,15 +309,17 @@ if(check){
     box-sizing: border-box;
     width:41vw;
     height:41vw;
-    }  
+    }
 `
 
-var styleSheet = document.createElement("style")
-styleSheet.type = "text/css"
-styleSheet.innerText = styles
-document.head.appendChild(styleSheet)
-}
+            var styleSheet = document.createElement("style")
+            styleSheet.type = "text/css"
+            styleSheet.innerText = styles
+            document.head.appendChild(styleSheet)
+        }
 
-</script>
+        
+    </script>
 </body>
+
 </html>
